# SignatureVerification.Api/Models/DetectionModel.cs
@@ -1,7 +1,0 @@
-namespace SignatureVerification.Api.Models;
-
-public enum DetectionModel
-{
-    Detr,
-    Yolo
-}
